--- a/Doc-Historico/AppShell.xaml
+++ b/Doc-Historico/AppShell.xaml
@@ -1,14 +1,14 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+﻿<?xml version="1.0" encoding="UTF-8" ?>
 <Shell
     x:Class="Doc_Historico.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:Doc_Historico"
+    xmlns:local="clr-namespace:Doc_Historico.Views"
     Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        Shell.NavBarIsVisible="False"
+        ContentTemplate="{DataTemplate local:PatientListPage}"
+        Route="PatientListPage" />
 
 </Shell>
