--- a/Doc-Historico/Views/PatientListPage.xaml
+++ b/Doc-Historico/Views/PatientListPage.xaml
@@ -1,12 +1,92 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Doc_Historico.Views.PatientListPage">
-    <VerticalStackLayout>
-        <Button 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center"
-            Command="{Binding GetPatients}"
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             xmlns:local="clr-namespace:Doc_Historico.Converters"
+             x:Class="Doc_Historico.Views.PatientListPage"
+             x:Name="PatientPage">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <local:SeparatorVisibilityConverter x:Key="separatorVisibilityConverter"/>
+
+        </ResourceDictionary>
+
+    </ContentPage.Resources>
+    <RefreshView
+        Command="{Binding RefreshCommand}"
+        IsRefreshing="{Binding IsBusy}">
+        <VerticalStackLayout Padding="10">
+
+            <Label
+            Text="Pacientes"
+            FontAttributes="Bold"
+            HorizontalOptions="Center"
+            FontSize="Title"/>
+            <Frame
+            BackgroundColor="#F5F5F5"
+            BorderColor="Transparent"
+                HeightRequest="40"
+            CornerRadius="15"
+            Margin="0,10"
+            Padding="0">
+                <Grid ColumnDefinitions="Auto, *">
+                    <Image
+                    Margin="5,0,5,0"
+                    WidthRequest="25"
+                    HeightRequest="25"
+                    Source="search.png"/>
+                    <Entry
+                    Grid.Column="1"
+                    PlaceholderColor="Transparent"
+                    BackgroundColor="Transparent"
+                    HorizontalOptions="FillAndExpand" />
+
+                </Grid>
+
+            </Frame>
+            <CollectionView
+            x:Name="listView"
+            ItemsSource="{Binding PatientList}">
+                <CollectionView.ItemsLayout>
+                    <LinearItemsLayout Orientation="Vertical" ItemSpacing="10"/>
+                </CollectionView.ItemsLayout>
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <SwipeView>
+                            <SwipeView.RightItems>
+                                <SwipeItems Mode="Execute">
+                                    <SwipeItem
+                                        Text="Deletar"
+                                        Command="{Binding BindingContext.DeletePatient, Source={x:Reference Name =PatientPage}}"
+                                        CommandParameter="{Binding .}"
+                                        BackgroundColor="PaleVioletRed"/>
+                                </SwipeItems>
+
+                            </SwipeView.RightItems>
+                            <VerticalStackLayout BackgroundColor="White">
+                            <Label Text="{Binding nome}"
+                           TextColor="Black"/>
+                            <Label Text="{Binding email}"
+                           TextColor="Black"/>
+                            <Label Text="{Binding dataNascimento}"
+                           TextColor="Black"/>
+                            <Label Text="{Binding responsavel}"
+                           TextColor="Black"/>
+                            <BoxView
+                            HeightRequest="1"
+                            Margin="0,5,0,0"
+                            Color="#d1d1d1"
+                            VerticalOptions="EndAndExpand"
+                            IsVisible="{Binding .,Converter={StaticResource separatorVisibilityConverter}, ConverterParameter={x:Reference Name=listView}}"/>
+                        </VerticalStackLayout>
+
+                        </SwipeView>
+                        
+                    </DataTemplate>
+
+                </CollectionView.ItemTemplate>
+
+            </CollectionView>
+        </VerticalStackLayout>
+
+    </RefreshView>
 </ContentPage>
